syntax = "proto3";

package proto;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "grpc-go/gen/proto/go/proto;proto";

service IdentityService {
  rpc CurrentUser(CurrentUserRequest) returns (CurrentUserReponse) {
    option (google.api.http) = {
      post: "/user"
      body: "*"
    };
  }
  rpc Login(LoginRequest) returns (LoginReponse) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  }
}

message CurrentUserRequest {}
message CurrentUserReponse {
	string id = 1;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}
message LoginReponse {}
